--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "^1.5.2",
     "react-native-paper": "^3.3.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "^2.0.0-alpha.17",
@@ -24,7 +24,9 @@
     "react-navigation-header-buttons": "^3.0.4",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^1.2.0"
+    "react-navigation-tabs": "^1.2.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0"
